Bug 297700 - Muon software center is not listing all repository package listed in Muon package manager
Summary: Muon software center is not listing all repository package listed in Muon pac...
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: 1.3.1
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 297699 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-08 03:44 UTC by vipin balakrishnan
Modified: 2012-04-08 04:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.4
Sentry Crash Report:


Attachments
testcases for muon software center (298.96 KB, application/zip)
2012-04-08 03:47 UTC, vipin balakrishnan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vipin balakrishnan 2012-04-08 03:44:12 UTC
Hi 

This bug is reference to 297613. But not  same case. In my system (Kubuntu 12.04 Beta2), I have installed Google chrome. And it is added Google repository for easy update. I can able to see the list of Google chrome packages from the repository in  "muon package manager". But when open up the "Muon software center" I can only see a link on left side Google, While clicking on it no package is getting listed on right.

Similar case is for canonical partners repository. I can able to see the list of packages in "muon package manager" But not in "Muon software center".

Please find the image explanation below.

testcase1.png - Google repository not getting listed in Muon Software Center
testcase2.png - Google repository is getting listed in  Muon Package Manager
testcase3.png - Canonical partners repository not getting listed in Muon Software Center
testcase4.png - Canonical partners repository  getting listed in Muon Package Manager

Software details

Kubuntu 12.04 Beta2
KDE - Platform Version 4.8.2 (4.8.2)
Muon Software Center Version 1.3.1 "Daring Dalek"
Kernal : 3.2.0-22-generic-pae

I have attached testcases.zip contain the screenshot  for the issue.
 

Best Regards,
Vipin Balakrishnan.
Comment 1 vipin balakrishnan 2012-04-08 03:46:12 UTC
*** Bug 297699 has been marked as a duplicate of this bug. ***
Comment 2 vipin balakrishnan 2012-04-08 03:47:23 UTC
Created attachment 70223 [details]
testcases for muon software center

testcases for muon software center
Comment 3 Jonathan Thomas 2012-04-08 04:33:31 UTC
This is because these repositories do not have any packages that are considered to be "applications". I'll have to think about the best way to handle this.
Comment 4 Jonathan Thomas 2012-04-08 04:50:55 UTC
Git commit d2a2731615d41375bd82c6f6c244e619aeddb292 by Jonathan Thomas.
Committed on 08/04/2012 at 06:49.
Pushed by jmthomas into branch 'master'.

Show technical packages on all third-party repositories, in case they don't have packages considered applications.
FIXED-IN:1.4

M  +1    -1    installer/ApplicationWindow.cpp

http://commits.kde.org/muon/d2a2731615d41375bd82c6f6c244e619aeddb292