Show technical packages on all third-party repositories, in case they don't have packages considered applications.

BUG:297700
FIXED-IN:1.4